--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <!-- Carga de Javascripts -->
+        <script type="text/javascript" src="libs/phaser.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
